prometheus/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: kube-monitor
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: grafana
